Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,27 +1,24 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = ""
+BOT_TOKEN = "5699576854:AAE1wgZQDBm7O9nVH2vBahDhb9Oy8L7LAFY"
+GDRIVE_FOLDER_ID = "1FpIQX8aM5iwJ39mpfKkxtul7g0pnGYSQ"
+OWNER_ID = "5490496870"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "true"
+TELEGRAM_API = "14194177"
+TELEGRAM_HASH = "589109d580d809beb88d2a02bc92412b"
+USE_SERVICE_ACCOUNTS = "true"
 
 # Optional config
 ACCOUNTS_ZIP_URL = "" #Enter Direct Links TO Import Service Accounts Directly From Urls Instead Of Adding Files To Repo.( Archive the accounts folder to a zip file.)
 TOKEN_PICKLE_URL = "" #Enter Direct Links TO Import Credentials Directly From Urls Instead Of Adding Files To Repo.
-AUTHORIZED_CHATS = "" #Separated by space
+AUTHORIZED_CHATS = "-1001319135655" #Separated by space
 SUDO_USERS = ""  #Separated by space
 LOGS_CHATS = "" #Separated by space
-DATABASE_URL = ""
+DATABASE_URL = "postgresql://postgres:HqYxSDGCHcs5xUFV9Eb7@containers-us-west-72.railway.app:5785/railway"
 IGNORE_PENDING_REQUESTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://saitama.dexterbot.workers.dev/0:/Bot%20Upload/"
 MEGA_KEY = ""
 MEGA_USERNAME = ""
 MEGA_PASSWORD = ""
@@ -36,10 +33,10 @@ RECURSIVE_SEARCH = "" #T/F And Fill drive_folder File Using Driveid.py Script.
 UPTOBOX_TOKEN = "" 
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if its URL ends with ?a=view, if yes make it True it will work (Compatible with Bhadoo Drive Index)
-VIEW_LINK = ""
+VIEW_LINK = "true"
 # GDTOT COOKIES
 PHPSESSID = ""
-CRYPT = ""
+CRYPT = "a2FFNDcvTDBGakZkZTIvRTRGMml5QnVTTUlyZnZJRlBQWVEzb1k3cE91bz0%3D"
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
 BUTTON_THREE_NAME = ""
