--- a/config.env
+++ b/config.env
@@ -16,7 +16,7 @@ TOKEN_PICKLE_URL = "" #Enter Direct Links TO Import Credentials Directly From Ur
 AUTHORIZED_CHATS = "-1001319135655" #Separated by space
 SUDO_USERS = ""  #Separated by space
 LOGS_CHATS = "" #Separated by space
-DATABASE_URL = "postgresql://postgres:HqYxSDGCHcs5xUFV9Eb7@containers-us-west-72.railway.app:5785/railway"
+DATABASE_URL = "postgresql://postgres:KcUMrMJGxlAneZphzfHD@containers-us-west-82.railway.app:5765/railway"
 IGNORE_PENDING_REQUESTS = ""
 INDEX_URL = "https://saitama.dexterbot.workers.dev/0:/Bot%20Upload/"
 MEGA_KEY = ""
@@ -39,8 +39,8 @@ PHPSESSID = ""
 CRYPT = "a2FFNDcvTDBGakZkZTIvRTRGMml5QnVTTUlyZnZJRlBQWVEzb1k3cE91bz0%3D"
 # Add more buttons (two buttons are already added of file link and index link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
-BUTTON_THREE_NAME = ""
-BUTTON_THREE_URL = ""
+BUTTON_THREE_NAME = "Get Accese"
+BUTTON_THREE_URL = "https://groups.google.com/u/1/g/dexterdrive"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
